# engram

./: .coverage  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: AGENT-INTEGRATION.md  AGENT-MEMORY.md  ARCHITECTURE-PHILOSOPHY.md  SPEC.md
engram/: agent.py  cli.py
engram/core/: __init__.py  models.py  storage.py
engram/ingest/: __init__.py  dedup.py  git.py  markdown.py
engram/query/: traversal.py
examples/: agent_example.py  logo_memory.py  vista_pnp_example.py
scripts/: migrate_memory_md.py
src/: __init__.py  agent.py  cli.py
src/core/: __init__.py  models.py  storage.py
src/query/: __init__.py
tests/: __init__.py  test_agent.py  test_cli.py  test_core.py  test_ingest.py  test_traversal.py  test_trees.py
