[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "engram"
version = "0.1.0"
description = "Graph-based memory for AI agents"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Josh Garrison", email = "jgarrison929@gmail.com" },
    { name = "River Banks Garrison" },
]
keywords = ["ai", "memory", "graph", "agents", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
embeddings = ["openai>=1.0.0", "numpy>=1.24.0"]
postgres = ["psycopg[binary]>=3.1.0"]
neo4j = ["neo4j>=5.0.0"]
cli = ["click>=8.0.0", "rich>=13.0.0", "python-dateutil>=2.8.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
all = ["engram[embeddings,postgres,neo4j,cli,dev]"]

[project.scripts]
engram = "engram.cli:main"

[project.urls]
Homepage = "https://github.com/jgarrison929/engram"
Documentation = "https://github.com/jgarrison929/engram#readme"
Repository = "https://github.com/jgarrison929/engram"
Issues = "https://github.com/jgarrison929/engram/issues"

[tool.hatch.build.targets.wheel]
packages = ["engram"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=engram --cov-report=term-missing"
